2010-12-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure: Creates a wrapper Makefile for librelsat.a.

2010-12-19  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.h: Add facilities to return models in the form of
	BeliefState in a message queue.
	* SATSolver.cpp (_bOutputBeliefState): Likewise.

2010-12-16  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* Makefile.linux (CFLAGS): Add path to bm3.7.0

2010-12-16  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* RandGen.h (RandGen::N, RandGen::M): Use static member variables
	for N and M prevents compile errors when including relsat together
	with bitmagic headers.
