@@ -1,0 +1,48 @@
+AUTOMAKE_OPTIONS = foreign
+
+EXTRA_DIST = HOW_TO_BUILD MAN_PAGE WHATS_NEW
+
+# including headers for make dist
+noinst_HEADERS = \
+	BigNum.h \
+	BigNum_dll.h \
+	BigNum_fake.h \
+	Clause.h \
+	ClauseList.h \
+	Debug.h \
+	GetOpt.h \
+	LightweightTypes.h \
+	Maximums.h \
+	RandGen.h \
+	Random.h \
+	SATInstance.h \
+	SATPreprocessor.h \
+	SATSolver.h \
+	VariableList.h \
+	VariableSet.h \
+	my_gmp.h
+
+# global preprocessor flags
+# TODO TK: fixme these should be autogenerated somehow
+AM_CPPFLAGS = \
+	-I/opt/local/include \
+	-I$(top_srcdir)/../include \
+	-I$(top_srcdir)/../bm3.7.0
+
+bin_PROGRAMS = relsat
+
+noinst_LIBRARIES = librelsat.a
+
+relsat_SOURCES = main.cpp sat_solve.cpp
+relsat_LDADD = librelsat.a
+
+librelsat_a_SOURCES = \
+	Debug.cpp \
+	SATPreprocessor.cpp \
+	Random.cpp \
+	ClauseList.cpp \
+	Clause.cpp \
+	SATInstance.cpp \
+	SATSolver.cpp \
+	VariableList.cpp \
+	RandGen.cpp
