@@ -1,0 +1,4 @@
+#!/bin/sh
+
+# rebuild autotool files
+autoreconf -f -i -W all
