@@ -1,0 +1,11 @@
+AC_INIT([relsat], [2.02], [roberto.bayardo@gmail.com])
+AC_CONFIG_AUX_DIR([.])
+AM_INIT_AUTOMAKE
+AC_PROG_CC
+AC_PROG_CXX
+AC_PROG_RANLIB
+CPPFLAGS="$CPPFLAGS -DNDEBUG"
+CXXFLAGS="$CXXFLAGS -O3"
+AC_CHECK_LIB(gmp, __gmpz_init, [], [CPPFLAGS="$CPPFLAGS -DNO_GMP"])
+AC_CONFIG_FILES([Makefile])
+AC_OUTPUT
